# TCP-Client-Server-

./: .gitignore  CMakeLists.txt  ClientSide.pro  clientmainwindow.cpp  clientmainwindow.h  clientmainwindow.ui  clientsidemainwindow.cpp  clientsidemainwindow.h  clientsidemainwindow.ui  clientsidemainwindow.ui.autosave  devicecontroller.cpp  devicecontroller.h  main.cpp  qrc.qrc
